--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "author": {
     "name": "AelithBlanchett",
-    "email": ""
+    "email": "tonyteur@yahoo.fr"
   },
   "dependencies": {
     "async": "^1.5.2",
