--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fchatlib",
-  "version": "0.5.9",
+  "version": "0.6.0",
   "description": "FChatLib",
   "main": "lib/libfchat.js",
   "author": {
@@ -18,7 +18,7 @@
     "glob": "*",
     "jsonfile": "^2.3.1",
     "request": "*",
-    "require-new": "*",
+    "require-clean": "*",
     "throttle-function": "*",
     "typescript": "^2.0.0",
     "ws": "*"
