working version - have to document and explain what I've done lol cleaned JS files and unused TS files Converted most of the code to typescript

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fchatlib",
   "version": "0.6.2",
   "description": "FChatLib",
-  "main": "lib/libfchat.js",
+  "main": "dist/index.js",
   "author": {
     "name": "AelithBlanchett",
     "email": "tonyteur@yahoo.fr"
