--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "sourceMap": true,
     "types": ["node", "jasmine"],
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "pretty": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "node_modules/**",
+    "dist"
+  ],
+  "include": [
+    "./src/**/*.ts",
+    "./test/**/*.ts"
   ]
 }
