cleaned JS files and unused TS files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 dist/test/config/config.js
 config.rooms.js
+Config.ts
+.idea/
+dist/index.d.ts
+dist/index.js
+dist/index.js.map
+dist/src/
+dist/test/config/Config.d.ts
+dist/test/config/Config.example.d.ts
+dist/test/config/Config.example.js
+dist/test/config/Config.example.js.map
+dist/test/config/Config.js.map
+dist/test/myTypescriptApp.d.ts
+dist/test/myTypescriptApp.js
+dist/test/myTypescriptApp.js.map
+dist/test/plugins/
+node_modules/
