--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "fchatlib",
-  "version": "0.6.2",
+  "version": "1.0.0",
   "description": "FChatLib",
-  "main": "dist/index.js",
+  "main": "dist/FChatLib.js",
+  "types": "dist/FChatLib.d.ts",
   "author": {
     "name": "AelithBlanchett",
     "email": "tonyteur@yahoo.fr"
@@ -10,6 +11,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AelithBlanchett/fchatlib.git"
+  },
+  "scripts": {
+    "prepublish": "npm run build",
+    "build": "tsc"
   },
   "dependencies": {
     "@types/jasmine": "^2.5.35",
