--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-dist/test/config/Config.js
 .idea/
-dist/src/
-dist/test/config/Config.d.ts
-dist/test/config/Config.example.d.ts
-dist/test/config/Config.example.js
-dist/test/config/Config.example.js.map
-dist/test/config/Config.js.map
-dist/test/myTypescriptApp.d.ts
-dist/test/myTypescriptApp.js
-dist/test/myTypescriptApp.js.map
-dist/test/plugins/
-node_modules/
-/test/config/Config.ts
+dist/**
+config/config.rooms.js
+node_modules/**
+yarn.lock
+package-lock.json
+test/config/**
