--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fchatlib",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "FChatLib",
   "main": "dist/src/FChatLib.js",
   "types": "dist/src/FChatLib.d.ts",
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "prepublish": "npm run build",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "tsc && node dist/test/myTypescriptApp.js"
   },
   "dependencies": {
     "@types/jasmine": "^2.6.0",
@@ -29,7 +30,7 @@
     "request": "^2.83.0",
     "resolve-from": "^3.0.0",
     "throttle-function": "^0.1.0",
-    "typescript": "^2.5.3",
+    "typescript": "^4.7.4",
     "uuid": "^3.1.0",
     "ws": "^3.2.0"
   }
